--- a/.github/workflows/prettier-format.yml
+++ b/.github/workflows/prettier-format.yml
@@ -4,13 +4,9 @@ on:
   push:
     paths:
       - "**/*.md"
-    branches:
-      - "*"
   pull_request:
     paths:
       - "**/*.md"
-    branches:
-      - "*"
 
 jobs:
   format:
@@ -41,6 +37,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push changes
-        run: git push
+        run: git push origin "HEAD:${{ github.ref#refs/heads/ }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
