--- a/.gitignore
+++ b/.gitignore
@@ -148,5 +148,8 @@ replay_pid*
 # mac
 **/.DS_Store
 
-# api
-*src/main/java/api/.env_local
+# tokens
+.env
+.env*.local
+.env*.development
+.env.test
